# agentcy

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  tools.py
.beads/: issues.jsonl  last-touched
agency/: __init__.py  cli.py
agency/core/: __init__.py  llm.py  mcp.py  output.py  store.py
agency/plugins/: __init__.py  seo.py  social.py
agency/schemas/: __init__.py  activation.py  creative.py  research.py  strategy.py
agency/stages/: __init__.py  activation.py  creative.py  research.py  strategy.py
agency/tools/: __init__.py  search.py
agency/ui/: __init__.py  prompts.py
agentcy/: __init__.py  cli.py  config.py  controller.py  db.py  display.py  gates.py  observability.py  retry.py  templates.py
agentcy/agents/: __init__.py  copywriter.py  critic.py  marketer.py  researcher.py  strategist.py  visual.py
agentcy/culture/: __init__.py  seed.py
agentcy/models/: artifacts.py  brand.py  campaign.py  stages.py
agentcy/persistence/: __init__.py  layout.py  sqlite.py
agentcy/quality/: __init__.py  rubrics.py  validators.py
agentcy/tools/: __init__.py  export.py  research.py  visual.py
archive/agentcy_v2/: __init__.py  cli.py  config.py  controller.py  db.py  display.py  export.py  llm.py  observability.py  retry.py
archive/agentcy_v2/agents/: __init__.py  copywriter.py  critic.py  marketer.py  researcher.py  strategist.py  visual.py
archive/agentcy_v2/models/: __init__.py  artifacts.py  campaign.py  stages.py
archive/agentcy_v2/persistence/: __init__.py  layout.py  sqlite.py
archive/agentcy_v2/quality/: __init__.py  rubrics.py  validators.py
archive/agentcy_v2/tools/: visual.py
templates/product-launch/: config.yaml
templates/product-launch/prompts/: activation.md  creative.md  research.md  strategy.md
tests/: __init__.py  test_agents.py  test_imports.py  test_integration.py
tests/fixtures/: sample_brand.yaml  sample_brief.txt
